http-egress-gateway/ecommerce-microservices/deploy/catalog-ui-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: catalog-ui-gateway
  namespace: ecommerce
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-ui-vs
  namespace: ecommerce
spec:
  hosts:
  - "*"
  gateways:
  - catalog-ui-gateway
  http:
  - route:
    - destination:
        host: catalog-ui
        port:
          number: 8080
